--- a/style.css
+++ b/style.css
@@ -260,26 +260,19 @@ a{
   font-family:wfont_643d94_dd28b3957391427eb54de1c9eff7cfb1,wf_dd28b3957391427eb54de1c9e,orig_tbc_x_regular;
 }
 .course-txt-wrapper{
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 85% 15%;
+  grid-template-columns: 100%;
 	height: 250px;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
   margin: 20px auto 20px 20px;
 }
+.course>div:first-child{
+  grid-row: 1/1;
+  grid-column: 1/1;
+}
 .details{
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+  grid-row: 2/2;
+  grid-column: 1/1;
 }
 .details path, .details a{
 	color: var(--color-4-font);
