--- a/style.css
+++ b/style.css
@@ -432,7 +432,7 @@ a{
 	align-items: center;
 	background-color: var(--color-1);
 	color: white;
- 	padding: 100px 0;
+ 	padding: 20px 0 100px 0;
 }
 .FAQs-heading{
 	width: 80%;
